# tabletop_trainer

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  app.py  helpers.py  parameters.py  pyproject.toml  run_celery.sh  run_flask.sh  server.py
backend/instructions/: orchestrator.txt
backend/models/: Battle.py  Battles.py  Interaction.py  Interactions.py  User.py  Users.py  __init__.py
backend/src/: app.py  battle_state.py  gen_client.py  helpers.py  parameters.py  scripts.py  server.py
backend/tasks/: celery_worker.py  tasks.py
client/: package.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  config.js  config.ts
frontend/src/components/: BattleCard.module.css  BattleCard.tsx  BattlePlanner.module.css  BattlePlanner.tsx  ChatBubble.tsx  DiceRollerModal.module.css  DiceRollerModal.tsx  Modal.module.css  Modal.tsx
frontend/src/config/: factions.ts
frontend/src/live-view/: LiveView.tsx
frontend/src/modules/: Api.ts  ArmyListParser.ts  api_module.ts  army-list-parser.ts  battle-utils.ts
frontend/src/pages/: AboutPage.jsx  ActiveBattle.jsx  ActiveBattle.module.css  AppBarPage.jsx  BattleDashBoardPage.tsx  BattleDashboardPage.module.css  ChatView.jsx  ChatView.module.css  ChatView.tsx  DefaultPage.d.ts  DefaultPage.jsx  GameSetupPage.jsx  GameSetupPage.module.css  GamesPage.jsx  HomePage.jsx  LoggedInHome.jsx  LoginPage.d.ts  LoginPage.jsx  LoginPage.module.css  LoginPage.tsx  UserDetails.jsx
frontend/src/store/: BattleStore.ts  UserStore.ts  battle_store.ts  user_store.ts
frontend/src/types/: BattleType.ts  UserType.ts  battle_type.ts  battles.ts  user_type.ts
frontend/test/: TestArmyListParser.ts
nginx/: nginx.conf
server/: pyproject.toml
server/src/: server.py
server/src/database/: docker-compose.yml  docker_compose
