[tool.poetry]
name = "wargainer-app"
version = "0.1.0"
description = ""
authors = ["HernanRossi <hfdrossi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
gunicorn = "^23.0.0"
flask-cors = "^5.0.1"
google-auth = "^2.39.0"
requests = "^2.32.3"
flask-session = "^0.8.0"
pyjwt = "^2.10.1"
jwt = "^1.3.1"
pytest = "^8.3.5"
google-genai = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
